force-app/main/default/objects/Receipt_Hold_Date__mdt/Receipt_Hold_Date__mdt.object-meta.xml
<CustomObject>
    <description>Used to calculate RCT.Hold_Date__c based on RCT.Payment_Type__c.</description>
    <label>Receipt Hold Date</label>
    <pluralLabel>Receipt Hold Dates</pluralLabel>
</CustomObject>