force-app/main/default/objects/Receipt_Hold_Date__mdt/fields/Bank_Location__c.field-meta.xml
<CustomField>
    <fullName>Bank_Location__c</fullName>
    <description>Used to match values from RCT.Bank_Location__c picklist.</description>
    <label>Bank Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CA Bank</fullName>
                <default>true</default>
                <label>CA Bank</label>
            </value>
            <value>
                <fullName>Out of State Bank</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>