force-app/main/default/objects/Receipt_Hold_Date__mdt/fields/Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days__c</fullName>
    <description>Number of days to add to RCT.Deposit_Date__c to calculate RCT.Hold_Date__c</description>
    <label>Number of Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>