force-app/main/default/objects/Receipt_Hold_Date__mdt/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <description>Used to match values from RCT.Payment_Type__c picklist. Not all values are used.</description>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
                <default>true</default>
                <label>Check</label>
            </value>
            <value>
                <fullName>EFT</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Cashier's Check</fullName>
            </value>
            <value>
                <fullName>Money Order</fullName>
            </value>
            <value>
                <fullName>State Warrant</fullName>
            </value>
            <value>
                <fullName>State Warrant - Returned by USPS</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Deduction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>